add header component

--- a/src/app/component/navigation/navigation.component.html
+++ b/src/app/component/navigation/navigation.component.html
@@ -1,5 +1,1 @@
-<div class="switch-language">
-    <p class="language-inUse">Français</p>
-    <div class="separate-language-switch"></div>
-    <p class="language">Anglais</p>
-</div>
+<p>navigation work</p>
