--- a/src/app/component/dropdown-nav/dropdown-nav.component.scss
+++ b/src/app/component/dropdown-nav/dropdown-nav.component.scss
@@ -1,7 +1,6 @@
 .dropdown{
     position : absolute;
     width: 100%;
-    height:50vh;
     background-color: #f5f6f8;
     color: black;
     .container{
@@ -109,8 +108,9 @@
             }
         }
         .some-article-nav{
-            padding: 0;
+            padding:0;
             width: 75%;
+            min-height: 260px;
             display: flex;
             flex-direction: row;
             justify-content: space-between;
@@ -128,7 +128,6 @@
                 margin-left: auto;
             }
             .lemondelogo{
-                background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg height='18….337.167.35z' fill='%23fff'/%3E%3C/g%3E%3C/svg%3E");
                 height: 5px;
                 width: 10px;
                 vertical-align: sub;
@@ -137,7 +136,23 @@
                 line-height: normal;
                 display: block;
                 font-size: 0.9rem;
+                
+            }
+            li:hover p{
+                color: black;
+                text-decoration: underline;
+            }
+            li:hover .categorie{
+                text-decoration: unset;
             }
         }
     }
+}
+.close-dropdown{
+    background-color: rgba(0, 0, 0, 0.548);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    min-height: 80%;
 }
