--- a/src/app/component/navigation/navigation.component.scss
+++ b/src/app/component/navigation/navigation.component.scss
@@ -12,12 +12,22 @@
         justify-content: space-around;
         align-items: center;
         list-style: none;
-        font-weight: 600;
+        font-weight: 530;
         li{
             width: 100%;
             height: 60px;
             line-height: 60px;
             text-align: center;
+        }
+        span{
+            vertical-align: middle;
+            
+        }
+        .Active{
+            background-color: #f5f6f8;
+            a{
+                color: #026b9c;
+            }
         }
         a{
             display: inline-block;
@@ -69,4 +79,16 @@
             }
         }
     }
+}
+.dropdown-icon{
+    display: inline-block;
+    transform: rotate(0deg);
+    color: #c4c4c4;
+    mat-icon{
+        font-size: 1.2rem;
+    }
+}
+.Active .dropdown-icon{
+    margin-top: -9px;
+    transform: rotate(180deg);
 }
