finish basic layout of homesection

--- a/src/app/component/home-articles/home-articles.component.html
+++ b/src/app/component/home-articles/home-articles.component.html
@@ -5,4 +5,7 @@
         <app-runner-article class="runner-article-container"></app-runner-article>
         <app-river-article class="river-article-container"></app-river-article>
     </section>
+    <section class="second-section">
+        <app-featured-article></app-featured-article>
+    </section>
 </div>
