--- a/src/app/component/home-articles/home-articles.component.scss
+++ b/src/app/component/home-articles/home-articles.component.scss
@@ -1,6 +1,8 @@
 .home-article{
     background-color: white;
     width: 50%;
+    display: flex;
+    flex-direction: row;
     margin-right: auto;
     margin-left: auto;
     margin-top: 7%;
@@ -11,6 +13,10 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 70%;
+}
+.second-section{
+    width: 27%;
+    margin: 2% auto;
 }
 
 .main-article-container{
