--- a/src/app/component/headline-article/headline-article.component.html
+++ b/src/app/component/headline-article/headline-article.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let article of headline">
+<div class="headline-article" *ngFor="let article of headline">
     <div class="picture"></div>
     <h3>{{article.title}}</h3>
 </div>
