--- a/src/app/component/home-articles/home-articles.component.html
+++ b/src/app/component/home-articles/home-articles.component.html
@@ -3,9 +3,11 @@
         <app-main-article class="main-article-container"></app-main-article>
         <app-headline-article class="headline-article-container"></app-headline-article>
         <app-runner-article class="runner-article-container"></app-runner-article>
-        <app-river-article class="river-article-container"></app-river-article>
     </section>
     <section class="second-section">
         <app-featured-article></app-featured-article>
+    </section>
+    <section class="third-section">
+        <app-river-article class="river-article-container"></app-river-article>
     </section>
 </div>
