--- a/src/app/component/runner-article/runner-article.component.html
+++ b/src/app/component/runner-article/runner-article.component.html
@@ -1,5 +1,5 @@
 <div class="article" *ngFor="let article of runner">
     <div class="picture"></div>
     <h4>{{article.title}}</h4>
-    <p>{{article.resume}}</p>
+    <p class="resume">{{article.resume}}</p>
 </div>
