--- a/src/app/component/navigation/navigation.component.scss
+++ b/src/app/component/navigation/navigation.component.scss
@@ -5,19 +5,23 @@
     box-shadow: 0px 10px 15px 1px rgba(128, 128, 128, 0.548);
 
     .list-navigation{
-        width: 64%;
+        width: 1024px;
         margin: auto;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
         list-style: none;
-        font-weight: 530;
+        font-size: 16px;
+        padding: 0;
         li{
             width: 100%;
             height: 60px;
             line-height: 60px;
             text-align: center;
+        }
+        li:nth-child(1), li:nth-child(9){
+            width: 50%;
         }
         span{
             vertical-align: middle;
@@ -44,12 +48,14 @@
     .newsByTime{
         background-color: #036487;
         height: 105px;
+        display: block;
         ul{
+            padding:0;
             margin: auto;
             display: flex;
             flex-direction: row;
             list-style: none;
-            width: 60%;
+            width: 1024px;
             font-size: 0.8rem;
            
             li{
@@ -91,4 +97,29 @@
 .Active .dropdown-icon{
     margin-top: -9px;
     transform: rotate(180deg);
+}
+
+@media screen and (max-width: 1024px){
+    .navigation{
+        overflow: auto;
+        overflow-x: scroll;
+        overflow-y: hidden; 
+    }
+        .navigation::-webkit-scrollbar {
+        width: 20px;
+        height: 7px;
+        }
+        
+        .navigation::-webkit-scrollbar-track {
+        display: none;
+        }
+        
+        .navigation::-webkit-scrollbar-thumb {
+            display: none;
+            background:rgba(128, 128, 128, 0.568);
+            border-radius: 10px;
+        }
+    .navigation .newsByTime{
+        display: none;
+    }
 }
