--- a/src/app/component/runner-article/runner-article.component.scss
+++ b/src/app/component/runner-article/runner-article.component.scss
@@ -1,9 +1,56 @@
 .picture{
-    width: 100%;
-    height: 150px;
+    width: 61%;
+    height: 6rem;
     background-color: #d5d8dc;
 }
 
 .article{
-    width: 30%;
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.article .resume{
+    display: none;
+}
+
+@media screen and (min-width: 576px){
+    .picture{
+        width: 70%;
+        height: 100px;
+        margin: 1%;
+    }
+
+    .article{
+        width: 80%;
+        margin:0 auto;
+    }
+}
+
+
+
+@media screen and (min-width: 738px){
+    .picture{
+        width: 60%;
+        height: 100px;
+        margin: 1%;
+    }
+
+    .article{
+        width: 664px;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .picture{
+        width: 100%;
+        height: 150px;
+    }
+    .article{
+        width: 30%;
+        flex-direction: column;
+    }
+    .article .resume{
+        display: inline;
+    }
 }
