--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -13,7 +13,10 @@
     </div>
     <img [src]="imageSrc" [alt]="imageAlt"/>
     <div class="SubscribeOrConnect">
-        <a class="connect" href="#">Se connecter</a>
+        <a class="connect" href="#">
+            <span><img [src]="connectionSrc" [alt]="connectionAlt"/></span>
+            <span>Se connecter</span>
+        </a>
         <a class="subscribe" href="#">S'abonner</a>
     </div>
 </div>
