--- a/src/app/component/dropdown-nav/dropdown-nav.component.scss
+++ b/src/app/component/dropdown-nav/dropdown-nav.component.scss
@@ -1,17 +1,23 @@
 .dropdown{
     position : absolute;
     width: 100%;
+    height: 100vh;
     background-color: #f5f6f8;
     color: black;
     .container{
-        width: 60%;
+        width: 98%;
         margin-right: auto;
         margin-left: auto;
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         justify-content: space-between;
-       
+        .section.services{
+            width: 45%;
+        }
+        .actualités.section:nth-child(1){
+            display:none;
+        }
         .section{
             display: inline-block;
             h3{
@@ -33,7 +39,7 @@
                 flex-direction: column;
             }
             .En.ce.moment{
-               width: 323px;
+               width: 100%;//323px
                display: flex;
                flex-direction: row;
                border-top: none;
@@ -57,12 +63,12 @@
                }
             }
             .Actualités{
-                width: 810px;
+                width: 100%;//810px
                 justify-content: space-between;
                 border-top: none;
                 li{
                     border-top: 1px solid #e2e4e9;
-                    width: 30%;
+                    width: 45%;
                     line-height: 2.5rem;
                     font-size:1.2rem;
                 }
@@ -111,7 +117,6 @@
             padding:0;
             width: 75%;
             min-height: 260px;
-            display: flex;
             flex-direction: row;
             justify-content: space-between;
             li{
@@ -155,4 +160,54 @@
     left: 0;
     width: 100%;
     min-height: 80%;
+}
+
+@media screen and (min-width: 576px) {
+    .dropdown{
+        height: auto;
+        .container{
+            .actualités.section:nth-child(1){
+                display:block;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .dropdown{
+        .container{
+            .actualités.section:nth-child(1){
+                width: 25%;
+            }
+            .actualités.section:nth-child(2){
+                width: 70%;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .dropdown{
+        .container{
+            width: 1024px;
+            flex-wrap: wrap;
+            .actualités.section:nth-child(1){
+                width: 30%;
+            }
+            .actualités.section:nth-child(2){
+                width: 65%;
+            }
+            .section{
+                .En.ce.moment{
+                    width: 312px;
+                }
+                .Actualités{
+                    width: 711px;
+                    li{
+                        width: 30%!important;
+                    }
+                }
+            }
+        }
+    }
 }
