--- a/src/app/component/dropdown-nav/dropdown-nav.component.scss
+++ b/src/app/component/dropdown-nav/dropdown-nav.component.scss
@@ -10,7 +10,6 @@
         margin-left: auto;
         display: flex;
         flex-direction: row;
-        flex-wrap: nowrap;
         justify-content: space-between;
         .section.services{
             width: 45%;
@@ -89,7 +88,9 @@
     }
     .économie, .vidéos, .débats, .culture, .m.le.mag{
         ul{
-            width: 20%;
+            width: 98%;
+            margin: 0 auto;
+            padding:0;
             list-style:none;
         }
         li{
@@ -115,10 +116,9 @@
         }
         .some-article-nav{
             padding:0;
+            display: none;
             width: 75%;
             min-height: 260px;
-            flex-direction: row;
-            justify-content: space-between;
             li{
                 border: none;
                 padding: 0 3%;
@@ -170,6 +170,20 @@
                 display:block;
             }
         }
+        .économie, .vidéos, .débats, .culture, .m.le.mag{
+            ul{
+                width: 30%;
+            }
+            .some-article-nav{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                justify-content: center;
+                li{
+                    width:30%;
+                }
+            }
+        }
     }
 }
 
@@ -206,6 +220,18 @@
                     li{
                         width: 30%!important;
                     }
+                }
+            }
+        }
+        .économie, .vidéos, .débats, .culture, .m.le.mag{
+            ul{
+                width: 20%;
+            }
+            .some-article-nav{
+                flex-wrap: nowrap;
+                justify-content: space-between;
+                li{
+                    width: 20%!important;
                 }
             }
         }
