--- a/src/app/component/dropdown-nav/dropdown-nav.component.html
+++ b/src/app/component/dropdown-nav/dropdown-nav.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="dropdown" class="close-dropdown"  (click)="closeDropdown()"></div>
 
 <div class='dropdown' *ngIf="dropdown" >
-    <div class="container" *ngIf="dropdown.name == 'actualités' || dropdown.name == 'services'">
+    <div [ngClass]="{'container': dropdown?.name != 'services', 'container-service': dropdown?.name == 'services'}" *ngIf="dropdown.name == 'actualités' || dropdown.name == 'services'">
         <div class="section {{dropdown?.name}}" *ngFor="let elements of dropdown.secondNavigation">
             <h3>{{elements.name | uppercase}}</h3>
             <ul class="{{elements.name}}">
