--- a/src/app/component/dropdown-nav/dropdown-nav.component.scss
+++ b/src/app/component/dropdown-nav/dropdown-nav.component.scss
@@ -4,6 +4,32 @@
     height: 100vh;
     background-color: #f5f6f8;
     color: black;
+    .container-service{
+        width: 98%;
+        margin-right: auto;
+        margin-left: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .section.services{
+            width: 100%;
+            ul{
+                list-style: none;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                li{
+                    a{
+                        color: black;
+                        text-decoration: none;
+                    }
+                    a:hover{
+                        color:#026b9c;
+                    }
+                }
+            }
+        }
+    }
     .container{
         width: 98%;
         margin-right: auto;
@@ -11,9 +37,6 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        .section.services{
-            width: 45%;
-        }
         .actualités.section:nth-child(1){
             display:none;
         }
@@ -117,6 +140,7 @@
         .some-article-nav{
             padding:0;
             display: none;
+            height: 700px;
             width: 75%;
             min-height: 260px;
             li{
@@ -164,12 +188,39 @@
 
 @media screen and (min-width: 576px) {
     .dropdown{
-        height: auto;
+        .container-service{
+            .section.services{
+                ul{
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    width: 98%;
+                    li{
+                        width: 45%;
+                    }
+                }
+            }
+        }
         .container{
             .actualités.section:nth-child(1){
                 display:block;
             }
         }
+        
+    }
+}
+@media screen and (min-width: 620px) {
+    .dropdown{
+        .container-service{
+            width: 98%;
+            .section.services{
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 703px) {
+    .dropdown{
         .économie, .vidéos, .débats, .culture, .m.le.mag{
             ul{
                 width: 30%;
@@ -200,8 +251,38 @@
     }
 }
 
+@media screen and (min-width: 921px) {
+    .dropdown{
+        height: auto;
+        .container-service{
+            flex-direction: row;
+            flex-wrap: wrap;
+            .section.services{
+                width: 45%;
+                flex-direction: row;
+                flex-wrap: wrap;
+                ul{
+                    padding: 0;
+                    width: 100%;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    justify-content: space-between;
+                    li{
+                        width:45%;
+                    }
+                }
+            }
+        }
+    }
+
+}
+
 @media screen and (min-width: 1024px) {
     .dropdown{
+        height: auto;
+        .container-service{
+            width: 1020px;
+        }
         .container{
             width: 1024px;
             flex-wrap: wrap;
